--- a/src/app/copiar-aposta/loterias/copiar-aposta-loterias.component.css
+++ b/src/app/copiar-aposta/loterias/copiar-aposta-loterias.component.css
@@ -2,6 +2,17 @@
     margin-bottom: 15px;
 }
 
+#aposta{
+    padding: 10px 14px;
+    border: 1px solid var(--game);
+    border-radius: 5px;
+}
+
+#aposta h2{
+    margin-bottom: 30px;
+}
+
+
 .div-jogos-selecionados .item-selecionado-inner{
     margin: 0px 30px;
 }
