fix: ajustes gerais no componente w-button

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -6,7 +6,6 @@
   --color-text: #ffffff;
   --color-text-input: #ffffff80;
   --color-background-input: #181818;
-  --color-text-win: rgba(109, 165, 68, 1);
-  --color-text-lose: rgba(246, 26, 26, 1);
-
+  --color-sucess: rgba(109, 165, 68, 1);
+  --color-danger: rgba(246, 26, 26, 1);
 }
