--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -70,7 +70,7 @@
     <div class="modal-body" style="min-height: 80%">
         <div class="content-modal-push">
             <img src="https://weebet.s3.amazonaws.com/{{SLUG}}/logos/logo_banca.png">
-            <h4>Gostaria de ativar notificações para ficar atualizado com nossas novidades?</h4>
+            <h4>Gostaria de ativar notificações para ficar atualizado com as nossas novidades?</h4>
         </div>
     </div>
     <div class="modal-footer" >
