feat(movements) movementView criado

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -6,4 +6,5 @@
   --color-text: #ffffff;
   --color-text-input: #ffffff80;
   --color-background-input: #181818;
+  --color-text-danger: #F61A1A;
 }
