Alteração no tamanho dos botões do header

--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -60,12 +60,12 @@
             <div class="deposit-shortcut" *ngIf="modoClienteAtivo && isCliente">
                 <div *ngIf="isMobile; then depositShortCutMobile else depositShortCutDesktop"></div>
                 <ng-template #depositShortCutDesktop>
-                    <a class="btn btn-custom mr-4" [routerLink]="['clientes/deposito']" [ngStyle]="{'height': '38px'}">
+                    <a class="btn btn-custom mr-4" [routerLink]="['clientes/deposito']">
                         {{'geral.depositar' | translate | uppercase}}
                     </a>
                 </ng-template>
                 <ng-template #depositShortCutMobile>
-                    <a class="btn btn-custom mr-4" (click)="abrirDepositos()" [ngStyle]="{'height': '38px'}">
+                    <a class="btn btn-custom mr-4" (click)="abrirDepositos()" [ngStyle]="{'height': '32px'}">
                         {{'geral.depositar' | translate | uppercase}}
                     </a>
                 </ng-template>
