--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -6,6 +6,6 @@
   --color-text: #ffffff;
   --color-text-input: #ffffff80;
   --color-background-input: #181818;
-  --color-success: rgba(109, 165, 68, 1);
-  --color-danger: rgba(246, 26, 26, 1);
+  --color-success: #6da544;
+  --color-danger: #f61a1a;
 }
