--- a/src/app/esportes/live/jogo/live-jogo.component.html
+++ b/src/app/esportes/live/jogo/live-jogo.component.html
@@ -222,6 +222,24 @@
                             <div class="time-nome">
                                 {{jogo?.time_a_nome}}
                             </div>
+                            <div class="game-stats" *ngIf="jogo?.sport_id == 1">
+                                <div class="game-stats-item">
+                                    <div class="game-card">
+                                        <svg width="13" height="15" viewBox="0 0 13 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M1 0.919525V7.27988M12.8249 13.6402H6.91245M1 7.27988V13.6402H6.91245M1 7.27988V7.27988C3.77463 8.23954 5.92692 10.4624 6.79656 13.2666L6.91245 13.6402" stroke="white" stroke-width="1.88461"/>
+                                        </svg>
+                                    </div>
+                                    {{ jogo?.stats.casa_escanteios }}
+                                </div>
+                                <div class="game-stats-item">
+                                    <div class="game-card red-card"></div>
+                                    {{ jogo?.stats.casa_cartoes_vermelho }}
+                                </div>
+                                <div class="game-stats-item">
+                                    <div class="game-card yellow-card"></div>
+                                    {{ jogo?.stats.casa_cartoes_amarelo }}
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="placares">
@@ -242,6 +260,24 @@
                             <br>
                             <div class="time-nome">
                                 {{jogo?.time_b_nome}}
+                            </div>
+                            <div class="game-stats" *ngIf="jogo?.sport_id == 1">
+                                <div class="game-stats-item">
+                                    <div class="game-card">
+                                        <svg width="13" height="15" viewBox="0 0 13 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M1 0.919525V7.27988M12.8249 13.6402H6.91245M1 7.27988V13.6402H6.91245M1 7.27988V7.27988C3.77463 8.23954 5.92692 10.4624 6.79656 13.2666L6.91245 13.6402" stroke="white" stroke-width="1.88461"/>
+                                        </svg>
+                                    </div>
+                                    {{ jogo?.stats.fora_escanteios }}
+                                </div>
+                                <div class="game-stats-item">
+                                    <div class="game-card red-card"></div>
+                                    {{ jogo?.stats.fora_cartoes_vermelho }}
+                                </div>
+                                <div class="game-stats-item">
+                                    <div class="game-card yellow-card"></div>
+                                    {{ jogo?.stats.fora_cartoes_amarelo }}
+                                </div>                            
                             </div>
                         </div>
                     </div>
