--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -706,9 +706,9 @@
                 <span>{{ 'menu.virtuais' | translate }}</span>
             </a>
         </div>
-        <div class="category" *ngIf="rifas">
+        <div class="category" *ngIf="rifa">
             <a [routerLink]="['/rifas']" routerLinkActive="active">
-                <span>{{'nemu.rifa' | translate }}</span>
+                <span>{{'menu.rifas' | translate }}</span>
             </a>
         </div>
 
