Ajuste Rifa  * ajuste layout

--- a/src/app/rifas/view/view.component.css
+++ b/src/app/rifas/view/view.component.css
@@ -17,7 +17,7 @@
 
     max-width: 764px;
     margin-top: 32px;
-    background: #0D3154;
+    background: var(--highlight);
     padding: 24px;
     border-radius: 8px 8px 8px 8px;
 
