--- a/src/app/rifas/wall/wall.component.html
+++ b/src/app/rifas/wall/wall.component.html
@@ -13,14 +13,14 @@
 
 
 
-                        <img class="rifa-banner" src="https://weebet.s3.amazonaws.com/{{SLUG}}/banners/{{sorteio.imagem}}" title="{{sorteio.nome}}">
+                        <img class="rifa-banner rounded-2" src="https://weebet.s3.amazonaws.com/{{SLUG}}/banners/{{sorteio.imagem}}" title="{{sorteio.nome}}">
 
                     </a>
                     <a class="hide-desktop" [routerLink]="['/rifas/show/',sorteio.id]" style="">
 
 
 
-                        <img class="rifa-banner" src="https://weebet.s3.amazonaws.com/{{SLUG}}/banners/{{sorteio.imagem_mobile}}" title="{{sorteio.nome}}">
+                        <img class="rifa-banner rounded-2" src="https://weebet.s3.amazonaws.com/{{SLUG}}/banners/{{sorteio.imagem_mobile}}" title="{{sorteio.nome}}">
 
                     </a>
 
