--- a/src/app/rifas/wall/wall.component.css
+++ b/src/app/rifas/wall/wall.component.css
@@ -7,3 +7,9 @@
     width: 100%;
     margin: 5px auto;
 }
+
+.rifa-banner:hover{
+    cursor: pointer;
+    transform: scale3d(1.01, 1.01, 1.01);
+    transition: transform 0.5s;
+}
