--- a/src/app/clientes/apostas-cliente/apostas-cliente.component.html
+++ b/src/app/clientes/apostas-cliente/apostas-cliente.component.html
@@ -88,7 +88,8 @@
                         <tr>
                             <th width="100">{{'geral.codigo' | translate}}</th>
                             <th *ngIf="tabSelected == 'cassino'">{{'geral.nomeJogoCassino' | translate}}</th>
-                            <th *ngIf="tabSelected == 'rifa'">{{'geral.titulo' | translate}}</th>
+                            <th *ngIf="tabSelected == 'rifa'">{{'loteria.sorteio' | translate}}</th>
+                            <th *ngIf="tabSelected == 'rifa'">{{'loteria.sorteio' | translate}}</th>
                             <th>{{'geral.horario' | translate}}</th>
                             <th>{{'geral.valor' | translate}}</th>
                             <th>{{'geral.premio' | translate}} </th>
@@ -104,7 +105,7 @@
                         <tr *ngFor="let aposta of apostas" class="{{ classNameAposta(aposta) }}">
                             <td>{{ aposta.codigo }}</td>
                             <td *ngIf="tabSelected == 'cassino'">{{ aposta.game }}</td>
-                            <td *ngIf="tabSelected == 'rifa'">{{ aposta.titulo }}</td>
+                            <td *ngIf="tabSelected == 'rifa'">{{ aposta.sorteio_nome }}</td>
                             <td>{{ aposta.horario | moment: 'DD/MM/YYYY HH:mm' }}</td>
                             <td>{{ aposta.valor | currency}}</td>
                             <td>{{ aposta.premio | currency }}</td>
