--- a/src/app/clientes/promocao/promocao.component.css
+++ b/src/app/clientes/promocao/promocao.component.css
@@ -161,6 +161,14 @@
     cursor: pointer;
 }
 
+.btn-custom-game{
+    text-align: center;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    gap: 7px;
+}
+
 @media only screen and (max-width: 834px) {
     .tabs a {
         width: 50%;
