--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
         <app-cassino class="widgets" linkAll="/casino" [games]="gamesPopulares" *ngIf="widget.nome == 'Cassino'" [showLoadingIndicator]="loadingCassino"/>
         <app-cassino class="widgets" linkAll="/live-casino" [games]="gamesPopularesAoVivo" [title]="'geral.cassinoAoVivo' | translate" *ngIf="widget.nome == 'Cassino Ao Vivo'" [showLoadingIndicator]="loadingCassinoAoVivo"/>
         <app-jogos-aovivo class="widgets" *ngIf="liveFootballIsActive && widget.nome == 'Jogos Ao Vivo'"/>
-        <app-jogos-destaque class="widgets" *ngIf="widget.nome == 'Jogos Destaque'"/>
+        <app-jogos-destaque class="widgets" *ngIf="widget.nome == 'Jogos Destaque' && hasFeaturedMatches" (hasFeaturedMatches)="changeDisplayFeaturedMatches($event)"/>
     </ng-container>
     <app-footer/>
 </div>
