--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -614,13 +614,23 @@
 
 <ng-template #menuTemplate>
     <div #menu class="d-flex">
-        <div class="category" *ngIf="aoVivoAtivo">
+        <div class="category" *ngIf="aoVivoAtivo && !betbyAtivo">
             <a [routerLink]="['/live']" routerLinkActive="active">
                 <span>{{'menu.aoVivo' | translate}}</span>
             </a>
         </div>
-        <div class="category" *ngIf="esporteAtivo">
+        <div class="category" *ngIf="esporteAtivo && !betbyAtivo">
             <a [routerLink]="['/esportes']" routerLinkActive="active">
+                <span>{{'menu.esportes' | translate}}</span>
+            </a>
+        </div>
+        <div class="category" *ngIf="betbyAtivo && aoVivoAtivo">
+            <a [routerLink]="['/betby?bt-path=%2Flive']" routerLinkActive="active">
+                <span>{{'menu.aoVivo' | translate}}</span>
+            </a>
+        </div>
+        <div class="category" *ngIf="betbyAtivo">
+            <a [routerLink]="['/betby']" routerLinkActive="active">
                 <span>{{'menu.esportes' | translate}}</span>
             </a>
         </div>
