--- a/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.html
+++ b/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.html
@@ -74,7 +74,7 @@
                 </div>
             </div>
         </div>
-        <div>
+        <div *ngIf="isLoterj">
             <div class="col-md-12">
                 <div class="form-group mb-4" [ngClass]="applyCssDivError('email')">
                     <div class="input-md">
@@ -159,7 +159,7 @@
         </div>
         <div class="row">
             <div class="col-12">
-                <label class="label-termo-uso">
+                <label *ngIf="!isLoterj" class="label-termo-uso">
                     {{'geral.deAcordoComOsTermos1' | translate}}
                     <a id="linkTermos"
                         target="_blank"
@@ -171,6 +171,23 @@
                         [routerLink]="['/informacoes/politica-privacidade']"
                         class="link-termos-politica"> {{'footer.politicaDePrivacidade' | translate | lowercase}}</a>.
                 </label>
+                <label *ngIf="isLoterj" class="label-termo-uso">
+                    <input type="checkbox" id="termosUso" formControlName="termosUso">
+                    <div>
+                        {{'geral.certificoQueTenhoMais' | translate}}
+                        <a id="linkTermos"
+                           target="_blank"
+                           [routerLink]="['/informacoes/termos-condicoes']"
+                           class="link-termos-politica"> {{'geral.termosDeUso' | translate | lowercase}}</a>
+                        {{'geral.deAcordoComOsTermos2' | translate}}
+                        <a id="linkPolitica"
+                           target="_blank"
+                           [routerLink]="['/informacoes/politica-privacidade']"
+                           class="link-termos-politica"> {{'footer.politicaDePrivacidade' | translate | lowercase}}</a>.
+                    </div>
+                </label>
+                <app-error-msg [control]="form.get('termosUso')"
+                               class="text-left"></app-error-msg>
             </div>
         </div>
 
@@ -191,7 +208,7 @@
         </div>
 
         <div class="row" *ngIf="provedorCaptcha == 'recaptcha'">
-            <div class="col-12" [ngStyle]="{'text-align': 'left'}">
+            <div class="col-12" [ngStyle]="{'text-align': 'left', 'margin-top': '10px'}">
                 <re-captcha  class="grecaptcha-badge" formControlName="captcha" #captchaRef="reCaptcha" (resolved)="onSubmit()" errorMode="handled" size="invisible" ></re-captcha>
                 Este site é protegido por reCAPTCHA e a
                 <a href="https://policies.google.com/privacy" target="_blank" class="link-termos-politica">Política de Privacidade</a> do Google e os
@@ -199,7 +216,7 @@
             </div>
 
             <div class="col-12">
-                <button type="submit" (click)="captchaRef.execute()" class="btn btn-custom btn-block btn-cadastrar" [disabled]="submitting">{{'geral.cadastrar' | translate}}</button>
+                <button type="submit" (click)="executeCaptcha()" class="btn btn-custom btn-block btn-cadastrar" [disabled]="submitting">{{'geral.cadastrar' | translate}}</button>
             </div>
             <div class="login">
                 {{'geral.jaPossuiUmaConta' | translate}}
